refactor: posts 엔티티 author > Member로 변경